# notary-sdk

./: .gitignore  CODEBUDDY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/work-orders/status/: PRG-004.json
src/notary/: __init__.py  interception.py  sealing.py  snapshot.py  verify.py
tests/: test_claim_boundaries.py  test_crypto_core.py  test_interception.py  test_placeholder.py
